--- a/app/src/main/res/layout/content_images.xml
+++ b/app/src/main/res/layout/content_images.xml
@@ -24,5 +24,14 @@
             android:layout_below="@+id/imgMedia"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/activity_horizontal_margin"/>
+
+        <TextView
+            android:id="@+id/txtFavs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtTweet"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:background="@android:color/holo_green_light"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
